# Kung-Fu-Chess

./: .coverage  .gitignore  CLAUDE.md  Iteration1_board_parser.py  README.md  commands.py  game_engine.py  main,.py  main.py  movement_tracker.py  pieces.py  pyproject.toml
common/: clock.py  events.py  logging_setup.py  result.py  tracing.py
common/config/: __init__.py  loader.py  schema.py
config/: default.toml
controller/: api.py  board_mapper.py  factory.py  game_controller.py
kfchess/api/: __init__.py  dto.py  engine_config.py  engine_mapping.py  events.py  factory.py  session.py
kfchess/engine/: game_engine.py  game_snapshot.py  move_log.py  move_result.py  real_time_arbiter.py
kfchess/input/: controller.py
kfchess/io/: board_parser.py  board_printer.py  score_printer.py
kfchess/model/: board.py  game_state.py  piece.py  position.py
kfchess/parsing/: commands.py
kfchess/realtime/: collision.py  cooldown.py  motion.py  movement_profile.py  real_time_arbiter.py
kfchess/rules/: move_result.py  move_validation.py  movement_rules.py  piece_rules.py  rule_engine.py  scoring.py
kfchess/testing/: text_test_runner.py
kfchess/texttests/: script_parser.py  script_runner.py
kfchess/ui/: board_mapper.py  controller.py  renderer.py
protocol/: codec.py  errors.py  messages.py
server/: main.py
server/application/: activity_log.py  auth_service.py  broadcast_observer.py  disconnect_policy.py  elo.py  game_room.py  matchmaking.py  rating_updater.py  room_service.py  room_ticker.py
server/domain/: client_session.py  connection_id.py  dead_connection.py  pending_move.py  room_status.py  websocket_port.py
server/infrastructure/: connection_factory.py  repositories.py  schema.sql  sqlite_game_record_repository.py  sqlite_user_repository.py
server/presentation/: connection.py  dispatcher.py  heartbeat.py
tests/: test_board.py  test_commands.py  test_game_engine.py  test_main.py  test_movement_tracker.py  test_pieces.py
tests/api/: test_engine_config.py  test_engine_mapping.py  test_events.py  test_factory.py  test_session.py
tests/common/: test_clock.py  test_events.py  test_logging_setup.py  test_result.py  test_tracing.py
tests/common/config/: test_loader.py  test_schema.py
tests/controller/: test_board_mapper.py  test_game_controller.py
tests/engine/: test_game_engine.py  test_game_snapshot.py  test_real_time_arbiter.py
tests/input/: test_board_mapper.py  test_controller.py
tests/io/: test_board_parser.py  test_board_printer.py  test_score_printer.py
tests/model/: test_board.py  test_game_state.py  test_piece.py  test_position.py
tests/parsing/: test_board_parser.py  test_commands.py
tests/protocol/: test_codec.py  test_errors.py
tests/realtime/: test_collision.py  test_cooldown.py  test_motion.py  test_movement_profile.py  test_real_time_arbiter.py
tests/rules/: test_move_result.py  test_movement_rules.py  test_piece_rules.py  test_rule_engine.py  test_scoring.py
tests/server/: test_main.py
tests/server/application/: test_activity_log.py  test_auth_service.py  test_broadcast_observer.py  test_disconnect_policy.py  test_elo.py  test_game_room.py  test_matchmaking.py  test_rating_updater.py  test_room_service.py  test_room_ticker.py
tests/server/domain/: test_client_session.py  test_connection_id.py  test_dead_connection.py  test_pending_move.py  test_room_status.py  test_websocket_port.py
tests/server/infrastructure/: test_connection_factory.py  test_repositories.py  test_sqlite_game_record_repository.py  test_sqlite_user_repository.py
tests/testing/: test_text_test_runner.py
tests/texttests/: test_script_parser.py  test_script_runner.py
tests/ui/: test_app.py  test_board_geometry.py  test_board_mapper.py  test_click_handler.py  test_controller.py  test_demo_driver.py  test_game_loop.py  test_img.py  test_main.py  test_renderer.py  test_ui_config.py
ui/: app.py  board_geometry.py  click_handler.py  demo_driver.py  game_loop.py  img.py  main.py  ui_config.py
ui/animation/: animation_config_loader.py  motion_predictor.py  piece_animator.py
ui/audio/: game_audio.py  sound_board.py  winsound_sound_board.py
ui/graphics/: board_theme.py  canvas.py  img_canvas.py  mouse_input.py  move_log_panel.py  piece_visual_state.py  renderer.py  score_panel.py  sprite_loader.py  sprite_resolver.py  window.py  winner_overlay.py
(+18 files in other folders)
