[project]
name = "kfchess"
version = "0.1.0"
description = "Kung-Fu-Chess: a real-time chess variant"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=5.0.0",
    "numpy>=2.5.1",
]

[dependency-groups]
dev = [
    "import-linter>=2.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_packages = ["kfchess", "controller", "ui"]

[[tool.importlinter.contracts]]
name = "Layers: ui -> controller -> kfchess"
type = "layers"
layers = ["ui", "controller", "kfchess"]

[[tool.importlinter.contracts]]
name = "ui only crosses into controller.api"
type = "forbidden"
source_modules = ["ui"]
forbidden_modules = ["kfchess"]
allow_indirect_imports = true
# ui/main.py is the graphics demo's composition root (the repo-root main.py
# is already the graded text-scripting entry point), so it is the one
# permitted exception that wires kfchess.api directly to controller/ui.
ignore_imports = ["ui.main -> kfchess.api"]

[[tool.importlinter.contracts]]
name = "controller only crosses into kfchess.api"
type = "forbidden"
source_modules = ["controller"]
forbidden_modules = [
    "kfchess.model", "kfchess.rules", "kfchess.realtime",
    "kfchess.engine", "kfchess.input", "kfchess.io", "kfchess.texttests",
]
allow_indirect_imports = true
