[project]
name = "kfchess"
version = "0.1.0"
description = "Kung-Fu-Chess: a real-time chess variant"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=5.0.0",
    "numpy>=2.5.1",
]

[dependency-groups]
dev = [
    "import-linter>=2.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_packages = ["kfchess", "ui"]

[[tool.importlinter.contracts]]
name = "Layers: ui -> kfchess"
type = "layers"
layers = ["ui", "kfchess"]

[[tool.importlinter.contracts]]
name = "ui only crosses into kfchess.api"
type = "forbidden"
source_modules = ["ui"]
forbidden_modules = [
    "kfchess.model", "kfchess.rules", "kfchess.realtime",
    "kfchess.engine", "kfchess.input", "kfchess.io", "kfchess.texttests",
]
allow_indirect_imports = true
